# Ferrite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
npm/: README.md  biome.jsonc  ferrite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
npm/src/: cli.ts  compiler.ts  ferrite.ts  index.ts  types.ts
src/: ast.rs  compiler.rs  config.rs  decl_emit.rs  lexer.rs  lib.rs  main.rs  source_map.rs  token.rs
src/codegen/: expr.rs  mod.rs
src/diagnostic/: mod.rs
src/parser/: expr.rs  mod.rs  stmt.rs  typ.rs
src/type_checker/: env.rs  error.rs  mod.rs  ty.rs
src/type_checker/infer/: check.rs  infer_expr.rs  mod.rs  types.rs
test/: biome.jsonc  ferrite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
test/src/: b.ts  index.ts
tests/: stress_test.rs
