[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"

[lib]
name = "ferrite"
crate-type = ["rlib"]

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true